added images casserole.jpg, burger_dogs.jpg and odin_eating.gif, added recipes burger_dogs.html and casserole.html, edited index.html and broccoli.html

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <img src="./images/odin_eating.gif" alt="Odin the dog eating like a person">
         <ul>
-            <li><a href="./recipes/broccoli.html">Broccoli Alfredo Pasta</a></li>
+            <li><a href="./recipes/broccoli.html">Broccoli Alfredo Pasta</a></li><br>
+            <li><a href="./recipes/casserole.html">Green Chile Chicken Enchilada Casserole</a></li><br>
+            <li><a href="./recipes/burger_dogs.html">Baked Burger Dogs</a></li>
         </ul>
     </body>
 </html>
