--- a/recipes/broccoli.html
+++ b/recipes/broccoli.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Broccoli Alfredo Pasta Recipe</title>
+        <title>Odin Recipes: Broccoli Alfredo Pasta Recipe</title>
     </head>
 
     <body>
@@ -42,7 +42,8 @@
                 <br>Stir in nutmeg and remove from heat. sauce is too thick, 
                 stir in a bit of reserved pasta water. <br>Season to taste with salt and pepper.</li><br>
             <li>To serve, combine cooked pasta, cooked broccoli, and sauce. 
-                <br>Garnish with fresh parsley sprigs, if desired.</li>
+                <br>Garnish with fresh parsley sprigs, if desired.</li><br>
         </ol>
+        <p><a href="../index.html">Return to all recipes</a></p>
     </body>
 </html>
